--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,8 @@
 <html lang="ar" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>TITAN JOY VIP | عيادة تجميل فاخرة</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;900&display=swap" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TITAN JOY VIP</title>
   </head>
   <body>
     <div id="root"></div>
